@@ -4,6 +4,9 @@
 
 # Changelog:
 #
+# Updated: 21 JAN 2024
+# - Apline now supported, for Hercules-Aethra (not fully tested)
+#
 # Updated: 12 JAN 2024
 # - fix type in README
 # - add support for Devuan Linux
